# RayTracing2D

./: CMakeLists.txt  CMakeSettings.json  SDL3_TST.sln
Source/: Constants.cpp  Constants.h  ControllAppManager.cpp  ControllAppManager.h  Helper.cpp  Helper.h  LogManager.cpp  LogManager.h  Main.cpp  ProcessAppManager.cpp  ProcessAppManager.h  ProfileMertickCollector.cpp  ProfileMertickCollector.h  RayTrace.cpp  RayTrace.h  RenderManager.cpp  RenderManager.h  ThreadPoolManager.cpp  ThreadPoolManager.h
